--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<groupId>com.rabelo.api-financeiro</groupId>
 	<artifactId>api-financeiro</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>api-financeiro</name>
 	<description>API lancamentos de contas</description>
 
