Correção do Jre 1.8

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,11 @@ spring.datasource.username=root
 spring.datasource.password=adielmo
 
 server.port=8081
+spring.profiles.active=basic-security
 
 spring.flyway.locations=classpath:db/migration,classpath:db/testdata
 
-
-
-
 #spring.flyway.locations=classpath:db/migration,filesystem:/api-financeiro/src/main/resources/db/testedada
-
 
 spring.jackson.deserialization.fail-on-unknown-properties= true
 
