--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		
+				<!-- JasperReports -->
+		<!-- <jasperreports.version>6.5.1</jasperreports.version>
+        <jasperreports-functions.version>6.5.1</jasperreports-functions.version>
+        <jasperreports-fonts.version>6.0.0</jasperreports-fonts.version> -->
 	</properties>
 
 	<dependencies>
@@ -83,12 +88,32 @@
 			<artifactId>spring-security-jwt</artifactId>
 			<version>1.0.11.RELEASE</version>
 		</dependency>
+		
+		<!-- JasperReports -->
+   <dependency>
+	<groupId>net.sf.jasperreports</groupId>
+	<artifactId>jasperreports</artifactId>
+	<version>6.16.0</version>
+  </dependency>
+
+	<dependency>
+		<groupId>net.sf.jasperreports</groupId>
+		<artifactId>jasperreports-functions</artifactId>
+		<version>6.16.0</version>
+	</dependency>
+
+	<dependency>
+		<groupId>net.sf.jasperreports</groupId>
+		<artifactId>jasperreports-fonts</artifactId>
+		<version>6.16.0</version>
+	</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
-		</dependency>
+		</dependency>	
+	
 	</dependencies>
 
 	<build>
@@ -99,5 +124,12 @@
 			</plugin>
 		</plugins>
 	</build>
+	
+	<repositories>
+        <repository>
+            <id>jr-ce-releases</id>
+            <url>http://jaspersoft.artifactoryonline.com/jaspersoft/jr-ce-releases</url>
+        </repository>
+    </repositories>
 
 </project>
