--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# spring.jpa.database=MYSQL
+spring.jpa.database=MYSQL
 spring.datasource.url=jdbc:mysql://localhost/financeiro?useTimezone=true&serverTimezone=America/Sao_Paulo&createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=adielmo
